# DocRAG-MD-

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  download_data.sh  main.py  pyproject.toml  start.sh
.claude/: settings.json
.claude/agents/: architecte.md  backend-dev.md  frontend-dev.md  testeur.md
.claude/skills/: docker-ops.md  langgraph-agent.md  rag-pipeline.md  react-frontend.md  testing.md
agents/: deep_search_agent.py  diagnosis_agent.py  eval_agent.py  general_agent.py  orchestrator.py  pharmacology_agent.py  rag_agent.py  tools.py
api/: main.py  schemas.py
api/routers/: auth.py  evaluate.py  health.py  ingest.py  query.py  ws.py
clickhouse/: config.xml
db/: init.sql
evaluation/: poc_benchmark.py  ragas_eval.py
evaluation/datasets/: medmcqa.py
frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
generation/: generator.py  llm_router.py  observability.py
generation/prompts/: clinical_qa.txt  cot_medical.txt  graph_qa.txt  patient_cot.txt  patient_qa.txt
ingestion/: pipeline.py
ingestion/embedders/: dense_embedder.py  sparse_embedder.py
mcp_servers/: citation_lookup_server.py  medical_search_server.py
model-loader/: Dockerfile
retrieval/: context_assembler.py  crag.py  deep_search.py  hybrid_retriever.py  knowledge_graph.py  qdrant_client.py  reranker.py  self_reflect.py  source_drilldown.py
retrieval/query_transform/: hyde.py  (+2 more)
scripts/: download_all.py
tests/: test_agents.py  test_api.py  test_deep_search.py  test_downloader.py  test_generator.py  test_ingestion.py  test_retrieval.py
(+12 files in other folders)
